--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,8 @@ jobs:
         uses: ./
         with:
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
+      - name: maturin build manylinux2010
+        uses: ./
+        with:
+          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
+          manylinux: '2010'
