Setup additional env vars for macOS universal2 build

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,11 @@ jobs:
         uses: ./
         with:
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
+      - name: maturin build universal2
+        if: matrix.os == 'macos-latest'
+        uses: ./
+        with:
+          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml --universal2
       - name: check maturin in PATH
         run: maturin --version
       - name: maturin build manylinux2010
