--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        toolchain: [stable, nightly]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/checkout@v2
@@ -19,10 +20,10 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-          override: true
       - name: maturin build
         uses: ./
         with:
+          rust-toolchain: ${{ matrix.toolchain }}
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
       - name: maturin build universal2
         if: matrix.os == 'macos-latest'
@@ -48,6 +49,7 @@ jobs:
           # { manylinux: '2014', target: 'aarch64-unknown-linux-gnu', container: 'messense/manylinux2014-cross:aarch64' },
           # { manylinux: '2014', target: 'armv7-unknown-linux-gnueabihf', container: 'messense/manylinux2014-cross:armv7' },
         ]
+        toolchain: [stable, nightly]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/checkout@v2
@@ -59,6 +61,7 @@ jobs:
         uses: ./
         with:
           maturin-version: '0.10.2'
+          rust-toolchain: ${{ matrix.toolchain }}
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
           manylinux: ${{ matrix.platform.manylinux }}
           target: ${{ matrix.platform.target }}
