--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,10 +44,30 @@ jobs:
     strategy:
       matrix:
         platform: [
-          { manylinux: '2010', target: 'x86_64-unknown-linux-gnu', container: 'quay.io/pypa/manylinux2010_x86_64' },
-          { manylinux: '2010', target: 'i686-unknown-linux-gnu', container: 'quay.io/pypa/manylinux2010_i686' },
-          # { manylinux: '2014', target: 'aarch64-unknown-linux-gnu', container: 'messense/manylinux2014-cross:aarch64' },
-          # { manylinux: '2014', target: 'armv7-unknown-linux-gnueabihf', container: 'messense/manylinux2014-cross:armv7' },
+          {
+            manylinux: '2010',
+            target: 'x86_64-unknown-linux-gnu',
+            container: 'quay.io/pypa/manylinux2010_x86_64',
+            test-crate: 'maturin/test-crates/pyo3-mixed'
+          },
+          {
+            manylinux: '2010',
+            target: 'i686-unknown-linux-gnu',
+            container: 'quay.io/pypa/manylinux2010_i686',
+            test-crate: 'maturin/test-crates/pyo3-mixed'
+          },
+          {
+            manylinux: '2014',
+            target: 'aarch64-unknown-linux-gnu',
+            container: 'messense/manylinux2014-cross:aarch64',
+            test-crate: 'maturin/test-crates/pyo3-pure'  # abi3
+          },
+          {
+            manylinux: '2014',
+            target: 'armv7-unknown-linux-gnueabihf',
+            container: 'messense/manylinux2014-cross:armv7',
+            test-crate: 'maturin/test-crates/pyo3-pure'  # abi3
+          },
         ]
         toolchain: [stable, nightly]
     steps:
@@ -62,7 +82,7 @@ jobs:
         with:
           maturin-version: '0.10.2'
           rust-toolchain: ${{ matrix.toolchain }}
-          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
+          args: -m ${{ matrix.platform.test-crate }}/Cargo.toml
           manylinux: ${{ matrix.platform.manylinux }}
           target: ${{ matrix.platform.target }}
           container: ${{ matrix.platform.container }}
