--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.ts",
   "scripts": {
     "build": "ncc build index.ts -o dist --minify",
-    "all": "npm run build"
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts",
+    "lint": "eslint **/*.ts",
+    "all": "npm run format && npm run lint && npm run build"
   },
   "repository": {
     "type": "git",
@@ -28,8 +31,11 @@
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "@vercel/ncc": "^0.28.5",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.25.0"
+    "eslint": "^7.25.0",
+    "eslint-plugin-github": "^4.1.3",
+    "prettier": "^2.2.1"
   }
 }
