--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,12 @@ jobs:
         with:
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
           manylinux: 'off'
+      - name: maturin build container off
+        uses: ./
+        with:
+          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
+          manylinux: '2010'
+          container: 'off'
 
   test-manylinux:
     name: Manylinux Test Suite
