Pass more env vars to docker container

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,6 +118,7 @@ jobs:
       - name: maturin build
         uses: ./
         env:
+          RUST_BACKTRACE: '1'
           PYO3_CROSS_LIB_DIR: '/opt/python/cp38-cp38/lib'
         with:
           maturin-version: 'v0.10.5-beta.3'
