Use maturin v0.10.5-beta.4

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -121,8 +121,8 @@ jobs:
           RUST_BACKTRACE: '1'
           PYO3_CROSS_LIB_DIR: '/opt/python/cp38-cp38/lib'
         with:
-          maturin-version: 'v0.10.5-beta.3'
+          maturin-version: 'v0.10.5-beta.4'
           rust-toolchain: ${{ matrix.toolchain }}
-          args: -m ${{ matrix.platform.test-crate }}/Cargo.toml -i python3.8
+          args: -m ${{ matrix.platform.test-crate }}/Cargo.toml -i python3.8 --no-sdist
           manylinux: ${{ matrix.platform.manylinux }}
           target: ${{ matrix.platform.target }}
