--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -96,6 +96,11 @@ jobs:
             test-crate: 'maturin/test-crates/pyo3-mixed'
           },
           {
+            manylinux: '2_24',
+            target: 'powerpc64le-unknown-linux-gnu',
+            test-crate: 'maturin/test-crates/pyo3-mixed'
+          },
+          {
             manylinux: '2014',
             target: 's390x-unknown-linux-gnu',
             test-crate: 'maturin/test-crates/pyo3-mixed'
@@ -122,6 +127,7 @@ jobs:
           PYO3_CROSS_LIB_DIR: '/opt/python/cp38-cp38/lib'
         with:
           maturin-version: 'v0.10.5-beta.4'
+          container: ${{ matrix.platform.container }}
           rust-toolchain: ${{ matrix.toolchain }}
           args: -m ${{ matrix.platform.test-crate }}/Cargo.toml -i python3.8 --no-sdist
           manylinux: ${{ matrix.platform.manylinux }}
