--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,6 +51,12 @@ jobs:
         with:
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
           manylinux: '2010'
+      - name: maturin build manylinux auto
+        if: matrix.os == 'ubuntu-latest'
+        uses: ./
+        with:
+          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
+          manylinux: 'auto'
       - name: maturin build manylinux off
         uses: ./
         with:
