--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,13 @@ jobs:
         with:
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
           manylinux: 'auto'
+      - name: maturin build nightly powerpc64le musl
+        if: matrix.os == 'ubuntu-latest'
+        uses: ./
+        with:
+          args: -m maturin/test-crates/hello-world/Cargo.toml
+          manylinux: 'auto'
+          target: 'powerpc64le-unknown-linux-musl'
       - name: maturin build manylinux off
         uses: ./
         with:
@@ -113,7 +120,7 @@ jobs:
           },
           {
             manylinux: 'auto',
-            target: 'powerpc64le-unknown-linux-musl',  # MUSL
+            target: 'x86_64-unknown-linux-musl',  # MUSL
             test-crate: 'maturin/test-crates/hello-world'  # binary
           },
         ]
