--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,9 +52,10 @@ jobs:
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
           manylinux: '2010'
       - name: maturin build manylinux auto
-        if: matrix.os == 'ubuntu-latest'
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
         uses: ./
         with:
+          rust-toolchain: nightly
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
           manylinux: 'auto'
       - name: maturin build nightly powerpc64le musl
