--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -166,11 +166,7 @@ jobs:
           ref: main
           path: maturin
       - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: all
+        uses: dbhi/qus/action@main
       - name: maturin build
         uses: ./
         env:
