--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,6 +106,13 @@ jobs:
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
           manylinux: '2_24'
           container: 'off'
+      - name: maturin build --cargo-extra-args directly
+        run: maturin build -m tests/pyo3-pure/Cargo.toml --cargo-extra-args="--features python"
+      - name: maturin build --cargo-extra-args
+        uses: ./
+        with:
+          args: -m tests/pyo3-pure/Cargo.toml --cargo-extra-args="--features python"
+          manylinux: 'auto'
 
   test-manylinux:
     name: Manylinux Test Suite
