--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "dependencies": {
     "@actions/core": "^1.6.0",
     "@actions/exec": "^1.1.0",
+    "@actions/glob": "^0.2.0",
     "@actions/io": "^1.1.0",
     "@actions/tool-cache": "^1.7.1",
     "string-argv": "^0.3.1",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
-    "@types/node": "^16.11.11",
+    "@types/node": "^17.0.1",
     "@typescript-eslint/parser": "^5.5.0",
     "@vercel/ncc": "^0.33.0",
     "eslint": "^8.3.0",
