Better support for macOS arm64

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,12 @@ jobs:
         uses: ./
         with:
           args: -m maturin/test-crates/pyo3-mixed/Cargo.toml --universal2
+      - name: maturin build arm64
+        if: matrix.os == 'macos-latest'
+        uses: ./
+        with:
+          target: aarch64-apple-darwin
+          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml
       - name: check maturin in PATH
         run: maturin --version
       - name: maturin build manylinux auto
