--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
+
 jobs:
   lint:
     name: Lint
@@ -112,8 +116,6 @@ jobs:
         with:
           rust-toolchain: ${{ matrix.toolchain }}
           args: -m maturin/test-crates/pyo3-pure/Cargo.toml --target aarch64-unknown-linux-gnu
-      - run: sudo rm -rf maturin/test-crates/pyo3-pure/target
-        if: matrix.os == 'ubuntu-latest'
       - name: maturin build --zig container off
         uses: ./
         with:
