--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -193,7 +193,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: PyO3/maturin
-          ref: main
+          ref: v0.12.10
           path: maturin
       - name: Set up QEMU
         uses: dbhi/qus/action@main
