--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,8 @@ jobs:
     name: Test Suite
     runs-on: ${{ matrix.os }}
     needs: [lint]
+    env:
+      RUST_BACKTRACE: '1'
     strategy:
       fail-fast: ${{ !contains(github.event.pull_request.labels.*.name, 'CI-no-fail-fast') }}
       matrix:
