Set default images for musllinux_1_1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
@@ -37,8 +37,8 @@ jobs:
           - windows-latest
         toolchain: [stable, nightly]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           repository: PyO3/maturin
           ref: main
@@ -191,6 +191,11 @@ jobs:
             test-crate: 'maturin/test-crates/hello-world'  # binary
           },
           {
+            manylinux: 'musllinux_1_1',
+            target: 'x86_64',
+            test-crate: 'maturin/test-crates/pyo3-pure'
+          },
+          {
             manylinux: 'musllinux_1_2',
             target: 'x86_64-unknown-linux-musl',  # MUSL
             test-crate: 'maturin/test-crates/hello-world'  # binary
@@ -198,8 +203,8 @@ jobs:
         ]
         toolchain: [stable, nightly]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           repository: PyO3/maturin
           ref: v0.12.10
