--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@actions/core": "^1.6.0",
     "@actions/exec": "^1.1.1",
     "@actions/glob": "^0.3.0",
-    "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^2.0.1",
+    "@iarna/toml": "^2.2.5",
     "string-argv": "^0.3.1",
     "typescript": "^4.6.2"
   },
