--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Update Version Manifest
+name: Update Versions Manifest
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   update:
-    name: Update Version Manifest
+    name: Update Versions Manifest
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -17,16 +17,16 @@ jobs:
         python-version: "3.10"
     - name: Install requirements
       run: pip install requests
-    - name: Generate Version Manifest
+    - name: Generate Versions Manifest
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: python generate-version-manifest.py
+      run: python generate-versions-manifest.py
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v4
       with:
-        branch: update-version-manifest
+        branch: update-versions-manifest
         delete-branch: true
         add-paths: |
           version-manifest.json
-        title: 'Update version-manifest.json'
-        commit-message: 'Update version-manifest.json'
+        title: 'Update versions-manifest.json'
+        commit-message: 'Update versions-manifest.json'
