--- a/versions-manifest.json
+++ b/versions-manifest.json
@@ -1,5 +1,67 @@
 [
   {
+    "version": "0.13.0-beta.8",
+    "stable": false,
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.13.0-beta.8",
+    "files": [
+      {
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "arch": "x86",
+        "platform": "win32",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.0-beta.8/maturin-i686-pc-windows-msvc.zip"
+      },
+      {
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "arch": "x64",
+        "platform": "darwin",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.0-beta.8/maturin-x86_64-apple-darwin.tar.gz"
+      },
+      {
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "arch": "x64",
+        "platform": "win32",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.0-beta.8/maturin-x86_64-pc-windows-msvc.zip"
+      },
+      {
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "arch": "x64",
+        "platform": "linux",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.0-beta.8/maturin-x86_64-unknown-linux-musl.tar.gz"
+      }
+    ]
+  },
+  {
+    "version": "0.13.0-beta.7",
+    "stable": false,
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.13.0-beta.7",
+    "files": [
+      {
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "arch": "x86",
+        "platform": "win32",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.0-beta.7/maturin-i686-pc-windows-msvc.zip"
+      },
+      {
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "arch": "x64",
+        "platform": "darwin",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.0-beta.7/maturin-x86_64-apple-darwin.tar.gz"
+      },
+      {
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "arch": "x64",
+        "platform": "win32",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.0-beta.7/maturin-x86_64-pc-windows-msvc.zip"
+      },
+      {
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "arch": "x64",
+        "platform": "linux",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.0-beta.7/maturin-x86_64-unknown-linux-musl.tar.gz"
+      }
+    ]
+  },
+  {
     "version": "0.12.20",
     "stable": true,
     "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.12.20",
@@ -1499,6 +1561,12 @@
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.7-beta.2/maturin-i686-pc-windows-msvc.zip"
       },
       {
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "arch": "x64",
+        "platform": "linux",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.7-beta.2/maturin-x86_64-unknown-linux-musl.tar.gz"
+      },
+      {
         "filename": "maturin-x86_64-apple-darwin.tar.gz",
         "arch": "x64",
         "platform": "darwin",
@@ -1509,12 +1577,6 @@
         "arch": "x64",
         "platform": "win32",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.7-beta.2/maturin-x86_64-pc-windows-msvc.zip"
-      },
-      {
-        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
-        "arch": "x64",
-        "platform": "linux",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.7-beta.2/maturin-x86_64-unknown-linux-musl.tar.gz"
       }
     ]
   },
@@ -1523,6 +1585,12 @@
     "stable": false,
     "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.12.7-beta.1",
     "files": [
+      {
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "arch": "x64",
+        "platform": "linux",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.7-beta.1/maturin-x86_64-unknown-linux-musl.tar.gz"
+      },
       {
         "filename": "maturin-i686-pc-windows-msvc.zip",
         "arch": "x86",
@@ -1540,12 +1608,6 @@
         "arch": "x64",
         "platform": "win32",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.7-beta.1/maturin-x86_64-pc-windows-msvc.zip"
-      },
-      {
-        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
-        "arch": "x64",
-        "platform": "linux",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.7-beta.1/maturin-x86_64-unknown-linux-musl.tar.gz"
       }
     ]
   },
@@ -3018,16 +3080,10 @@
     "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.11.0",
     "files": [
       {
-        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
-        "arch": "x64",
-        "platform": "linux",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-x86_64-unknown-linux-musl.tar.gz"
-      },
-      {
-        "filename": "maturin-x86_64-pc-windows-msvc.zip",
-        "arch": "x64",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "arch": "x86",
         "platform": "win32",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-x86_64-pc-windows-msvc.zip"
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-i686-pc-windows-msvc.zip"
       },
       {
         "filename": "maturin-x86_64-apple-darwin.tar.gz",
@@ -3036,10 +3092,16 @@
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-x86_64-apple-darwin.tar.gz"
       },
       {
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "arch": "x86",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "arch": "x64",
         "platform": "win32",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-i686-pc-windows-msvc.zip"
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-x86_64-pc-windows-msvc.zip"
+      },
+      {
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "arch": "x64",
+        "platform": "linux",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-x86_64-unknown-linux-musl.tar.gz"
       }
     ]
   },
@@ -3048,12 +3110,6 @@
     "stable": false,
     "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.11.0-beta.5",
     "files": [
-      {
-        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
-        "arch": "x64",
-        "platform": "linux",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0-beta.5/maturin-x86_64-unknown-linux-musl.tar.gz"
-      },
       {
         "filename": "maturin-i686-pc-windows-msvc.zip",
         "arch": "x86",
@@ -3071,6 +3127,12 @@
         "arch": "x64",
         "platform": "win32",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0-beta.5/maturin-x86_64-pc-windows-msvc.zip"
+      },
+      {
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "arch": "x64",
+        "platform": "linux",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0-beta.5/maturin-x86_64-unknown-linux-musl.tar.gz"
       }
     ]
   },
